; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/extr_drm_ioc32.c_drm_compat_ioctl.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/extr_drm_ioc32.c_drm_compat_ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 (%struct.file*, i32, i64)*, i32 }
%struct.file = type { %struct.drm_file* }
%struct.drm_file = type { i32, %struct.TYPE_6__* }
%struct.TYPE_6__ = type { %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i32 }

@drm_compat_ioctls = common dso_local global %struct.TYPE_7__* null, align 8
@.str = private unnamed_addr constant [32 x i8] c"pid=%d, dev=0x%lx, auth=%d, %s\0A\00", align 1
@current = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [10 x i8] c"ret = %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @drm_compat_ioctl(%struct.file* %0, i32 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.file*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.drm_file*, align 8
  %10 = alloca i32 (%struct.file*, i32, i64)**, align 8
  %11 = alloca i32, align 4
  store %struct.file* %0, %struct.file** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @DRM_IOCTL_NR(i32 %12)
  store i32 %13, i32* %8, align 4
  %14 = load %struct.file*, %struct.file** %5, align 8
  %15 = getelementptr inbounds %struct.file, %struct.file* %14, i32 0, i32 0
  %16 = load %struct.drm_file*, %struct.drm_file** %15, align 8
  store %struct.drm_file* %16, %struct.drm_file** %9, align 8
  %17 = load i32, i32* %8, align 4
  %18 = load %struct.TYPE_7__*, %struct.TYPE_7__** @drm_compat_ioctls, align 8
  %19 = call i32 @ARRAY_SIZE(%struct.TYPE_7__* %18)
  %20 = icmp uge i32 %17, %19
  br i1 %20, label %21, label %26

21:                                               ; preds = %3
  %22 = load %struct.file*, %struct.file** %5, align 8
  %23 = load i32, i32* %6, align 4
  %24 = load i64, i64* %7, align 8
  %25 = call i64 @drm_ioctl(%struct.file* %22, i32 %23, i64 %24)
  store i64 %25, i64* %4, align 8
  br label %76

26:                                               ; preds = %3
  %27 = load %struct.TYPE_7__*, %struct.TYPE_7__** @drm_compat_ioctls, align 8
  %28 = load i32, i32* %8, align 4
  %29 = zext i32 %28 to i64
  %30 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %27, i64 %29
  %31 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %30, i32 0, i32 0
  %32 = load i32 (%struct.file*, i32, i64)*, i32 (%struct.file*, i32, i64)** %31, align 8
  %33 = bitcast i32 (%struct.file*, i32, i64)* %32 to i32 (%struct.file*, i32, i64)**
  store i32 (%struct.file*, i32, i64)** %33, i32 (%struct.file*, i32, i64)*** %10, align 8
  %34 = load i32 (%struct.file*, i32, i64)**, i32 (%struct.file*, i32, i64)*** %10, align 8
  %35 = icmp ne i32 (%struct.file*, i32, i64)** %34, null
  br i1 %35, label %41, label %36

36:                                               ; preds = %26
  %37 = load %struct.file*, %struct.file** %5, align 8
  %38 = load i32, i32* %6, align 4
  %39 = load i64, i64* %7, align 8
  %40 = call i64 @drm_ioctl(%struct.file* %37, i32 %38, i64 %39)
  store i64 %40, i64* %4, align 8
  br label %76

41:                                               ; preds = %26
  %42 = load i32, i32* @current, align 4
  %43 = call i32 @task_pid_nr(i32 %42)
  %44 = load %struct.drm_file*, %struct.drm_file** %9, align 8
  %45 = getelementptr inbounds %struct.drm_file, %struct.drm_file* %44, i32 0, i32 1
  %46 = load %struct.TYPE_6__*, %struct.TYPE_6__** %45, align 8
  %47 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %46, i32 0, i32 0
  %48 = load %struct.TYPE_5__*, %struct.TYPE_5__** %47, align 8
  %49 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 4
  %51 = call i64 @old_encode_dev(i32 %50)
  %52 = load %struct.drm_file*, %struct.drm_file** %9, align 8
  %53 = getelementptr inbounds %struct.drm_file, %struct.drm_file* %52, i32 0, i32 0
  %54 = load i32, i32* %53, align 8
  %55 = load %struct.TYPE_7__*, %struct.TYPE_7__** @drm_compat_ioctls, align 8
  %56 = load i32, i32* %8, align 4
  %57 = zext i32 %56 to i64
  %58 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %55, i64 %57
  %59 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %58, i32 0, i32 1
  %60 = load i32, i32* %59, align 8
  %61 = call i32 (i8*, i32, ...) @DRM_DEBUG(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i32 %43, i64 %51, i32 %54, i32 %60)
  %62 = load i32 (%struct.file*, i32, i64)**, i32 (%struct.file*, i32, i64)*** %10, align 8
  %63 = load i32 (%struct.file*, i32, i64)*, i32 (%struct.file*, i32, i64)** %62, align 8
  %64 = load %struct.file*, %struct.file** %5, align 8
  %65 = load i32, i32* %6, align 4
  %66 = load i64, i64* %7, align 8
  %67 = call i32 %63(%struct.file* %64, i32 %65, i64 %66)
  store i32 %67, i32* %11, align 4
  %68 = load i32, i32* %11, align 4
  %69 = icmp ne i32 %68, 0
  br i1 %69, label %70, label %73

70:                                               ; preds = %41
  %71 = load i32, i32* %11, align 4
  %72 = call i32 (i8*, i32, ...) @DRM_DEBUG(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i32 %71)
  br label %73

73:                                               ; preds = %70, %41
  %74 = load i32, i32* %11, align 4
  %75 = sext i32 %74 to i64
  store i64 %75, i64* %4, align 8
  br label %76

76:                                               ; preds = %73, %36, %21
  %77 = load i64, i64* %4, align 8
  ret i64 %77
}

declare dso_local i32 @DRM_IOCTL_NR(i32) #1

declare dso_local i32 @ARRAY_SIZE(%struct.TYPE_7__*) #1

declare dso_local i64 @drm_ioctl(%struct.file*, i32, i64) #1

declare dso_local i32 @DRM_DEBUG(i8*, i32, ...) #1

declare dso_local i32 @task_pid_nr(i32) #1

declare dso_local i64 @old_encode_dev(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
